--- a/LS02/LS02-09.html
+++ b/LS02/LS02-09.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Canvas</title>
+    <title>Canvas描边与填充（纯色、渐变色）</title>
     <script type="text/javascript">
         window.addEventListener('load', eventWindowLoaded, false);
         function eventWindowLoaded() {
