--- a/LS02/LS02-16.html
+++ b/LS02/LS02-16.html
@@ -13,6 +13,24 @@
         function canvasApp() {
             var theCanvas = document.getElementById('canvas');
             var context = theCanvas.getContext('2d');
+
+            context.beginPath();
+            context.fillStyle = 'black';
+            context.fillRect(0, 100, theCanvas.width, 300);
+            //绘制路径
+            context.beginPath();
+            context.arc(250, 250, 150, 0, Math.PI * 2);
+            context.fillStyle = 'white';
+            context.fill();
+            //裁剪
+            context.clip();
+
+            context.font = 'bold 100px sans-serif';
+            context.textAlign = 'center';
+            context.textBaseline = 'middle';
+            context.fillStyle = 'red';
+            context.fillText("Canvas", theCanvas.width / 2, theCanvas.height / 2);
+
             
         }
 
